--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   sleek_circular_slider: ^2.0.1
   dio: ^4.0.6
+  rxdart: ^0.27.5
+  timezone: ^0.9.0
+  flutter_local_notifications: ^12.0.0
 
 dev_dependencies:
   flutter_test:
